# CIGEN

./: Dockerfile  README.md  build_llvm_env.sh  run_docker.sh  setup.sh
baseline_civ/: CMakeLists.txt  Makefile.plugin
baseline_civ/TraceDiff/: CMakeLists.txt  TraceDiff.cpp
driver/: config.py  test_engine_cigen.py  tester.py
driver_civ/: config.py  test_engine_civ.py  tester.py
gsl_test/: run_gsl.py  seed.txt  stability_test.py
gsl_test/100_sf_psi_1/: input.txt  test.c
gsl_test/101_sf_synchrotron_1/: input.txt  test.c
gsl_test/102_sf_synchrotron_2/: input.txt  test.c
gsl_test/103_sf_transport_2/: test.c
gsl_test/104_sf_transport_3/: input.txt  test.c
gsl_test/105_sf_transport_4/: input.txt  test.c
gsl_test/106_sf_transport_5/: input.txt  test.c
gsl_test/107_sf_sin/: input.txt  test.c
gsl_test/108_sf_cos/: input.txt  test.c
gsl_test/109_sf_sinc/: input.txt  test.c
gsl_test/10_pow_6/: input.txt  test.c
gsl_test/110_sf_lnsinh/: test.c
gsl_test/111_sf_lncosh/: input.txt  test.c
gsl_test/112_sf_angle_restrict_symm/: input.txt  test.c
gsl_test/113_sf_angle_restrict_pos/: input.txt  test.c
gsl_test/114_sf_zeta/: input.txt  test.c
gsl_test/115_sf_zetam1/: input.txt  test.c
gsl_test/116_sf_eta/: input.txt  test.c
gsl_test/117_hypot/: input.txt  test.c
gsl_test/118_hypot3/: input.txt  test.c
gsl_test/119_sf_bessel_Jnu/: input.txt  test.c
gsl_test/11_pow_7/: input.txt  test.c
gsl_test/120_sf_bessel_Ynu/: input.txt  test.c
gsl_test/121_sf_bessel_Inu/: input.txt  test.c
gsl_test/12_pow_8/: input.txt  (+1 more)
results/: results_bgrt.csv
(+287 files in other folders)
